feat: add error handling for medDispatchRec; unit test v4 basically done